# docs

./: .dockerignore  .gitignore  Dockerfile  auth-flow.md  helm-values.yaml  pyproject.toml  setup.cfg  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: build-deploy.yaml  remove-review-branch.yaml
delphai_api/: auth.py  main.py  models.py  types.py  utils.py
delphai_api/companies/: models.py  routes.py
